<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="specificstep.com.Fragments.DMTAddSender">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtDMTAddSenderFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/dmt_add_sender_first_name"
                        android:lines="1"
                        android:nextFocusDown="@+id/edtDMTAddSenderEmail"
                        android:singleLine="true"
                        android:layout_weight="0.9" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtDMTAddSenderLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:singleLine="true"
                        android:hint="@string/dmt_add_sender_last_name"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:hintTextAppearance="@style/TextLabel">

                    <EditText
                        android:id="@+id/edtDMTAddSenderMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:hint="@string/dmt_add_sender_mobile"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDMTAddSenderEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dmt_add_sender_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDMTAddSenderAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:singleLine="true"
                    android:hint="@string/dmt_add_sender_address" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDMTAddSenderPincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="6"
                    android:hint="@string/dmt_add_sender_pincode"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintTextAppearance="@style/TextLabel">

                <EditText
                    android:id="@+id/edtDMTAddSenderDob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dmt_add_sender_dob"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnAddSenderCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_round_corner_colordefault"
                    android:text="@string/dmt_add_sender_btn_cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_content_text_small_size" />

                <Button
                    android:id="@+id/btnAddSenderSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/square_round_corner_colorprimary"
                    android:text="@string/dmt_add_sender_btn_submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_content_text_small_size" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
