<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/white"
    tools:context="specificstep.com.Fragments.OnlinePaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dmt_search_sender_hint"
                android:maxLength="10"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/edtamount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dmt_search_sender_amount"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_submit"
        android:layout_marginTop="15dp"
        android:background="@drawable/square_round_corner_colorprimary"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:textSize="@dimen/btn_content_text_small_size"/>

</LinearLayout>
