<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/signup_content_box_margin"
    android:weightSum="2"
    tools:context="specificstep.com.Activities.RegistrationActivity"
    android:id="@+id/lnrRegister">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/signup_content_box_margin"
        android:layout_weight="0.5"
        android:background="@color/colorLayoutBackground"
        android:gravity="center"
        android:padding="@dimen/signup_content_box_padding"
        android:weightSum="1">


        <EditText
            android:id="@+id/edt_uname_or_email_act_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_bg"
            android:gravity="center_vertical"
            android:hint="@string/str_email_or_uname"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress|text"
            android:maxLines="1"
            android:paddingBottom="@dimen/signup_text_field_bottom_padding"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="@dimen/content_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg_app_act_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_button_top_margin"
        android:background="@drawable/edt_login_btn"
        android:text="@string/register_app"
        android:textSize="@dimen/btn_content_text_small_size" />
    <Button
        android:id="@+id/btn_reg_app_act_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_up_button_top_margin"
        android:background="@drawable/edt_login_btn"
        android:text="@string/signup_app"
        android:textSize="@dimen/btn_content_text_small_size"
        android:visibility="gone"/>

</LinearLayout>
